<resources>
    <string name="app_name" translatable="false">VentaOnline</string>
    <string name="moneyIcon">€</string>
    <string name="creatina_creature">Creatina Excell</string>
    <string name="creatina_vegana">Creatina Vegana</string>
    <string name="proteina_isoweight">Proteina Isoweight</string>
    <string name="proteina_clearweight">Proteina Clearweight</string>
    <string name="proteina_vegana">Proteina Vegana</string>
    <string name="preworkout_monstrack">Preworkout Monstrack</string>
    <string name="preworkout_black_blood">Preworkout Black Blood</string>
    <string name="msgButtonPress">"Añadido a la cesta "</string>
    <string name="ErrorAddBkt0">Cantidad 0</string>
    <string name="basketcontentXML" translatable="false">BasketContent</string>
    <string name="languageXMLTag" translatable="false">language</string>
    <string name="languageXMLName" translatable="false">LanguagePref</string>
    <string name="homeBttTxt">Home</string>
    <string name="lenguageBttTxt">Lenguage</string>
    <string name="offersBttTxt">Offers</string>
    <string name="basketBttTxt">Basket</string>
    <string name="hi_userTxt">Hi, User</string>
    <string name="loginBttTxt">LogIn</string>
    <string name="productTxt" translatable="false">Product</string>
    <string name="plusAmount" translatable="false">+</string>
    <string name="subsAmount" translatable="false">-</string>
    <string name="ceroTxt" translatable="false">0</string>
    <string name="addBttXml">Add</string>
    <string name="LogInTxtUser">User</string>
    <string name="LogInTxtPassword">Password</string>
    <string name="LogInBttLogIn">Log In</string>
    <string name="LogInETxtName">Nombre</string>
    <string name="LogInETxtPasswor">Contraseña</string>
    <string name="XMLusrprefPref" translatable="false">UsrPref</string>
    <string name="LogInETxtExceptionMsg">Ambos campos tienen que estar completos</string>
    <string name="LogInTxtExceptionEmpty">Datos erronos</string>
    <string name="BktTxtTu_cesta">Tu cesta</string>
    <string name="BktBttclear">Clear</string>
    <string name="BktBttbuy">Buy</string>
    <string name="MsgEmptyBktBuy">Cesta vacia</string>
    <string name="MsgBuyBkt">Compra realizada</string>
    <string name="activeXMLTag" translatable="false">active</string>
    <string name="txtUsr">Hola: %s</string>
    <string name="DefNameUsr" translatable="false">Usuario</string>
    <string name="HiBktMsg">Tu cesta</string>
    <string name="MsgBktClrEmpty">La cesta esta vacia</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- -
    This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
</resources>