<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logInLaunched">

    <TextView
        android:id="@+id/LogInTxtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/LogInTxtUser"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LogInTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/LogInTxtPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/LogInTxtUser"
        app:layout_constraintStart_toStartOf="@+id/LogInTxtUser"
        app:layout_constraintTop_toBottomOf="@+id/LogInETxtName" />

    <Button
        android:id="@+id/LogInBttLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="logInBttAct"
        android:text="@string/LogInBttLogIn"
        app:layout_constraintEnd_toEndOf="@+id/LogInETxtPassword"
        app:layout_constraintStart_toStartOf="@+id/LogInETxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/LogInETxtPassword" />

    <EditText
        android:id="@+id/LogInETxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/LogInETxtName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/LogInTxtUser"
        app:layout_constraintStart_toStartOf="@+id/LogInTxtUser"
        app:layout_constraintTop_toBottomOf="@+id/LogInTxtUser" />

    <EditText
        android:id="@+id/LogInETxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/LogInETxtPasswor"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/LogInTxtPassword"
        app:layout_constraintStart_toStartOf="@+id/LogInTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/LogInTxtPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>