<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainBttOffe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE7F6"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/MainBttHome"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_marginLeft="4px"
            android:layout_marginEnd="4px"
            android:layout_weight="1"
            android:backgroundTint="#424242"
            android:text="@string/homeBttTxt" />

        <Button
            android:id="@+id/MainBttLan"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_marginLeft="4px"
            android:layout_marginEnd="4px"
            android:layout_weight="1"
            android:backgroundTint="#424242"
            android:onClick="changeLanguage"
            android:text="@string/lenguageBttTxt" />

        <Button
            android:id="@+id/BktBuy"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_marginLeft="4px"
            android:layout_marginEnd="4px"
            android:layout_weight="1"
            android:backgroundTint="#424242"
            android:onClick="initBasket"
            android:text="@string/basketBttTxt"
            android:textColorLink="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/MainTxtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8px"
            android:layout_weight="3"
            android:text="@string/hi_userTxt"
            android:textColor="#5E35B1"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4px"
            android:layout_marginBottom="4px">

            <TextView
                android:id="@+id/MainTxtProd1"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="4"
                android:text="@string/productTxt"
                android:textColor="#5E35B1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MainBttAdd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="2"
                android:backgroundTint="#424242"
                android:onClick="addBkt"
                android:text="@string/addBttXml"
                android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4px"
            android:layout_marginBottom="4px">

            <TextView
                android:id="@+id/MainTxtProd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="4"
                android:text="@string/productTxt"
                android:textColor="#5E35B1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MainBttAdd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="2"
                android:backgroundTint="#424242"
                android:onClick="addBkt"
                android:text="@string/addBttXml"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4px"
            android:layout_marginBottom="4px">

            <TextView
                android:id="@+id/MainTxtProd3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="4"
                android:text="@string/productTxt"
                android:textColor="#5E35B1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MainBttAdd3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="2"
                android:backgroundTint="#424242"
                android:onClick="addBkt"
                android:text="@string/addBttXml"
                android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4px"
            android:layout_marginBottom="4px">

            <TextView
                android:id="@+id/MainTxtProd4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="4"
                android:text="@string/productTxt"
                android:textColor="#5E35B1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MainBttAdd4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="2"
                android:backgroundTint="#424242"
                android:onClick="addBkt"
                android:text="@string/addBttXml"
                android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4px"
            android:layout_marginBottom="4px">

            <TextView
                android:id="@+id/MainTxtProd5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="4"
                android:text="@string/productTxt"
                android:textColor="#5E35B1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MainBttAdd5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="2"
                android:backgroundTint="#424242"
                android:onClick="addBkt"
                android:text="@string/addBttXml"
                android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4px"
            android:layout_marginBottom="4px">

            <TextView
                android:id="@+id/MainTxtProd6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="4"
                android:text="@string/productTxt"
                android:textColor="#5E35B1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MainBttAdd6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="2"
                android:backgroundTint="#424242"
                android:onClick="addBkt"
                android:text="@string/addBttXml"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4px"
            android:layout_marginBottom="4px">

            <TextView
                android:id="@+id/MainTxtProd7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="4"
                android:text="@string/productTxt"
                android:textColor="#5E35B1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MainBttAdd7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4px"
                android:layout_marginRight="4px"
                android:layout_weight="2"
                android:backgroundTint="#424242"
                android:onClick="addBkt"
                android:text="@string/addBttXml"
                android:textColor="#FFFFFF" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/MainTxtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ceroTxt"
                android:textColor="#5E35B1"
                android:textSize="34sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/MainBttSubsAmou"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="#5E35B1"
                android:onClick="substr"
                android:text="@string/subsAmount"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/MainBttPlusAmou"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="#5E35B1"
                android:onClick="plus"
                android:text="@string/plusAmount"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.dam2.ventaonline.AddBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>